--- a/wp-content/themes/virtual-conference/css/fontello.css
+++ b/wp-content/themes/virtual-conference/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.eot?60711507');
-  src: url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.eot?60711507#iefix') format('embedded-opentype'),
-       url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.woff2?60711507') format('woff2'),
-       url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.woff?60711507') format('woff'),
-       url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.ttf?60711507') format('truetype'),
-       url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.svg?60711507#fontello') format('svg');
+  src: url('/wp-content/themes/virtual-conference/font/fontello.eot?60711507');
+  src: url('/wp-content/themes/virtual-conference/font/fontello.eot?60711507#iefix') format('embedded-opentype'),
+       url('/wp-content/themes/virtual-conference/font/fontello.woff2?60711507') format('woff2'),
+       url('/wp-content/themes/virtual-conference/font/fontello.woff?60711507') format('woff'),
+       url('/wp-content/themes/virtual-conference/font/fontello.ttf?60711507') format('truetype'),
+       url('/wp-content/themes/virtual-conference/font/fontello.svg?60711507#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('https://mrinalsharma14.github.io/IE2023/wp-content/themes/virtual-conference/font/fontello.svg?60711507#fontello') format('svg');
+    src: url('/wp-content/themes/virtual-conference/font/fontello.svg?60711507#fontello') format('svg');
   }
 }
 */
